On redirection, update the proxy script URL so that it avoids a catch-22: proxy url retreival require a proxy url! Fixes a long long standing bug.

BUG: 123356
FIXED-IN: 4.6.3